--- a/assets/Diafora/stylesheets/estilos.css
+++ b/assets/Diafora/stylesheets/estilos.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   --grey-color: #7f7f7f;
   --main-bg-color: #7f7f7f;
   --main-color: #7f7f7f;
@@ -27,7 +27,7 @@ h1{
 	width: 100%;
 	height: 100%;
   vertical-align: center;
-}
+} */
 
 .Taxonomy{
   position: relative;
