--- a/assets/Diafora/stylesheets/style.css
+++ b/assets/Diafora/stylesheets/style.css
@@ -1,6 +1,6 @@
 /* Search the size of header to change for --top-margin */
 
-:root {
+/* :root {
 
   --grey-color: #7f7f7f;
   --main-bg-color: #7f7f7f;
@@ -9,13 +9,13 @@
   --accent-color: #FB7422;
   --top-margin: 10%;
 
-  --remove-color: #D50000;      
-  --add-color: #38B03D;        
-  --split-color: #C700BA;  
-  --merge-color: #FFA452;    
-  --rename-color: #1700E7;    
-  --move-color: #09D3D3;    
-  --equal-color: #e8e8e8;        
+  --remove-color: #D50000;
+  --add-color: #38B03D;
+  --split-color: #C700BA;
+  --merge-color: #FFA452;
+  --rename-color: #1700E7;
+  --move-color: #09D3D3;
+  --equal-color: #e8e8e8;
   --focus-color: #50500020;
   --other-color: #4c4c4c;
 }
@@ -28,7 +28,7 @@ body {
 	font-size: 12pt;
 	font-weight: 400;
 
-}
+} */
 
 .main_body{
   height: 100%;
@@ -91,7 +91,7 @@ tr:hover {background-color: #f5f5f5;}
     padding: 0px;
     text-align: center;
     margin-top: 5%;
-    background-color: var(--secondary-color);	
+    background-color: var(--secondary-color);
 }
 
 
@@ -99,8 +99,8 @@ tr:hover {background-color: #f5f5f5;}
   position: absolute;
   bottom: 5px;
   text-align:center;
-	margin-left: auto; 
-	margin-right: auto; 
+	margin-left: auto;
+	margin-right: auto;
 	width: 80%;
 	font-size: 14pt;
 }
@@ -114,7 +114,7 @@ tr:hover {background-color: #f5f5f5;}
 
 .buttonsHeader{
     position:  relative;
-    top: 4%; 
+    top: 4%;
     margin-right:10px;
     font-size: 15pt;
     background-color: rgba(0,0,0,0);
@@ -217,7 +217,7 @@ p{
   opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
   -webkit-transition: .2s; /* 0.2 seconds transition on hover */
   transition: opacity .2s;
-      
+
 
 }
 
@@ -226,9 +226,9 @@ p{
   opacity: 1; /* Fully shown on mouse-over */
 }
 
-/* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */ 
+/* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */
 .slider::-webkit-slider-thumb {
- 
+
   -webkit-appearance: none;
   appearance: none;
   width: 25px; /* Set a specific slider handle width */
@@ -256,7 +256,7 @@ p{
   width: 30px;
   height: 17px;
   border: 1px;
-  
+
 }
 
 /* Hide default HTML checkbox */
