--- a/public/stylesheets/graphicsStyle.css
+++ b/public/stylesheets/graphicsStyle.css
@@ -1,10 +1,10 @@
 
-    /* body {
+    body {
         font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
         width: 960px;
         height: 500px;
         position: relative;
-    } */
+    }
 
     svg {
         width: 100%;
