--- a/public/stylesheets/estilos.css
+++ b/public/stylesheets/estilos.css
@@ -1,15 +1,20 @@
-/* :root {
+:root {
   --grey-color: #7f7f7f;
-  --main-bg-color: #7f7f7f;
+  --main-bg-color: rgb(50, 50, 50);;
   --main-color: #7f7f7f;
   --secondary-color: #CCCCCC;
   --accent-color: #4c4c4c;
+}
+
+body {
+  background-color: lightblue;
 }
 
 h1{
 	margin-left: 20px;
 	font-size: 16pt;
   color: white;
+  background-color: var(--main-bg-color);
   text-align: center;
 }
 
@@ -23,11 +28,11 @@ h1{
 	position: absolute;
 	margin-top: 0%;
 	padding: 0px;
-	background-color: var(--main-color);
+	background-color: var(--main-bg-color);
 	width: 100%;
 	height: 100%;
   vertical-align: center;
-} */
+}
 
 .Taxonomy{
   position: relative;
