--- a/views/fileSelection.ejs
+++ b/views/fileSelection.ejs
@@ -58,6 +58,44 @@
 		  </form>
 		</div>
 	  </nav>
+<div id="carousel" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+    <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="assets/images/flower.jpg" class="d-block" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Diaforá:</h5>
+        <p>Taxonomies interactive comparison tool.</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="assets/images/tiger.jpg" class="d-block" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>See the changes:</h5>
+        <p>Diaforá provides a quick overview for taxonomy changes.</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="assets/images/frog.jpg" class="d-block " alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>A tool for the experts</h5>
+        <p>Get insight about taxonomies changes.</p>
+      </div>
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
 	<h1 class="">Select Taxonomies</h1>
 	<p id="error_text" class="alert_display"></p>
 	<div id="content" class="selection_body">	
