--- a/views/fileSelection.ejs
+++ b/views/fileSelection.ejs
@@ -7,6 +7,7 @@
 	<link href="/stylesheets/selector.css" rel="stylesheet">
 	<script src="/lib/jquery.min.js"></script>
 	<script src="/lib/bootstrap.bundle.js"></script>
+	<script src="/javascripts/globalconf.js"></script>
 	<script type="text/javascript" src="/javascripts/fileSelection/verificacion.js"></script>
 	<meta http-equiv="Access-Control-Allow-Origin" content="*"> 
     <title> Diaforá Taxonomy Viewer </title>
@@ -33,23 +34,7 @@
 			  </a>
 			</li>
 			<li class="nav-item">
-			  <a class="nav-link" href="#">Features</a>
-			</li>
-			<li class="nav-item">
-			  <a class="nav-link" href="#">Pricing</a>
-			</li>
-			<li class="nav-item">
 			  <a class="nav-link" href="#">About</a>
-			</li>
-			<li class="nav-item dropdown">
-			  <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-			  <div class="dropdown-menu">
-				<a class="dropdown-item" href="#">Action</a>
-				<a class="dropdown-item" href="#">Another action</a>
-				<a class="dropdown-item" href="#">Something else here</a>
-				<div class="dropdown-divider"></div>
-				<a class="dropdown-item" href="#">Separated link</a>
-			  </div>
 			</li>
 		  </ul>
 		  <form class="form-inline my-2 my-lg-0">
