--- a/public/stylesheets/selector.css
+++ b/public/stylesheets/selector.css
@@ -1,3 +1,7 @@
+body {
+  background-color: #393B40;
+}
+
 h1{
   margin-top: 50px;
   margin-left: 20px;
@@ -19,3 +23,41 @@ h5{
 p{
   text-shadow: 2px 2px 4px black;
 }
+.carousel-item{
+    height: 200px;
+}
+.jumbotron{
+    position: relative;
+    align-items:center;
+    display:flex;  
+    background-size:cover;
+    background-color:#898888;
+    height: 50vh; /* Add this */
+    color:white;
+}
+
+.bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-image:url('../assets/images/forest.jpg');
+  filter: blur(8px);
+  -webkit-filter: blur(8px);
+  background-size:cover;
+}
+
+.jumbo-item{
+  position: relative;
+   text-shadow: 2px 2px 4px black;
+}
+
+.lead {
+  margin-left: 50%;
+}
+
+.jmb-desc {
+  display: inline-block;
+}
+
