--- a/views/fileSelection.ejs
+++ b/views/fileSelection.ejs
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
 	<meta charset="utf-8"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" type="image/vnd.microsoft.icon" href="assets/favicon.ico" sizes="16x16">
 	<link href="/stylesheets/bootstrap.min.css" rel="stylesheet">
 	<link href="/stylesheets/selector.css" rel="stylesheet">
@@ -43,43 +44,6 @@
 		  </form>
 		</div>
 	  </nav>
-<!-- <div id="carousel" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-    <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="assets/images/flower.jpg" class="d-block" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Diaforá:</h5>
-        <p>Taxonomies interactive comparison tool.</p>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="assets/images/tiger.jpg" class="d-block" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>See the changes:</h5>
-        <p>Diaforá provides a quick overview for taxonomy changes.</p>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="assets/images/frog.jpg" class="d-block " alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>A tool for the experts</h5>
-        <p>Get insight about taxonomies changes.</p>
-      </div>
-    </div>
-  </div> -->
-  <!-- <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a> -->
 <div class="jumbotron jumbotron-fluid">
   <div class="bg"></div>
   <div class="container jumbo-item">
@@ -87,7 +51,7 @@
     <p class="lead jumbo-item  col-md-8 col-md-offset-2 center">A taxonomic comparison tool.</p>
   </div>
 </div>
-</div>
+<div class="container-fluid">
 	<h1 class="">Select Taxonomies</h1>
 	<p id="error_text" class="alert_display"></p>
 	<div id="content" class="selection_body">	
@@ -104,5 +68,6 @@
 		<button class="btn btn-secondary mr-2 important_button">About</button>
 		</div>
 	</div>
+</div>
 </body>
 </html>
