--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -33,7 +33,6 @@ body {
 .main_body{
   height: 100%;
   position: fixed;
-  z-index: 1;
   top: 0;
   overflow-x: hidden;
 
@@ -81,9 +80,10 @@ tr:hover {background-color: #f5f5f5;}
 
 /*Separator Style*/
 .separator{
-  size: "6";
-  width: "50%";
-  color: "#cccccc";
+    margin-top: 1rem;
+    margin-bottom: 0rem;
+    border: 0;
+    border-top: 2px solid rgba(0,0,0,.1)
 }
 
 .header{
@@ -350,4 +350,13 @@ input:checked + .slider_switch:before {
   -webkit-transform: translateX(18px);
   -ms-transform: translateX(18px);
   transform: translateX(18px);
+}
+
+.statistics-btn {
+    margin-left: 1%;
+    position: absolute;
+    left: 0px;
+    margin-top: 1%;
+    color: white;
+}
 }
