--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -53,6 +53,15 @@ body {
   width: 80%;
 }
 
+.fullwidth {
+  width: 100%;
+}
+
+.fullwidth canvas {
+  width: 100% !important;
+  height: 100% i !important;
+}
+
 .top{
   top: var(--top-margin);
 }
@@ -115,7 +124,7 @@ tr:hover {background-color: #f5f5f5;}
 
 .buttonsHeader{
     position:  relative;
-    top: 4%; 
+    top: 20%; 
     margin-right:10px;
     font-size: 15pt;
     background-color: rgba(0,0,0,0);
@@ -152,8 +161,7 @@ p{
   color: white;
   position:relative;
   width: 5%;
-
-  text-align: left;
+  text-align: center;
 }
 
 /*
@@ -212,7 +220,7 @@ p{
   -webkit-appearance: slider-horizontal;
   appearance: none;
   width: 100px; /* Full-width */
-  height: 30px; /* Specified height */
+  height: 25px; /* Specified height */
   background: #d3d3d3; /* Grey background */
   outline: none; /* Remove outline */
   opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
@@ -353,10 +361,87 @@ input:checked + .slider_switch:before {
 }
 
 .statistics-btn {
-    margin-left: 1%;
-    position: absolute;
-    left: 0px;
-    margin-top: 1%;
     color: white;
+    margin-right: 1.5rem;
+    margin-top: .5rem;
+    position: inline-grid
 }
+
+.slidecontainer {
+  font-size: 12px;
+  color: white;
+  width: 5%;
+  text-align: left;
+  height: 25px;
+  margin-right: 20px;
+}
+
+.context-holder {
+  position: fixed;
+  top: 70%;
+  left:20%;
+  background-color: #d3d3d3;
+  width: 80%;
+  height: 30%;
+  z-index: 2;
+}
+
+
+.sunburst{
+  background-color: transparent;
+  height: 300px;
+  width: 20%;
+  left: 25%;
+  position: fixed;
+  z-index: 2;
+}
+
+.treeContext {
+  position: relative;
+  top: 11em;
+  font-size: 12pt;
+  font-weight: bold;
+  color: black;
+  text-align: center;
+  margin-left: 6px;
+}
+
+.sunburst2 {
+  background-color: transparent;
+  height: 300px;
+  width: 20%;
+  left: 75%;
+  position: fixed;
+  z-index: 2;
+}
+
+.treeContext2 {
+  position: relative;
+  top: 160px;
+  font-size: 11pt;
+}
+
+#tooltip {
+  background: cornsilk;
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 5px;
+  width: 250px;
+  height: 220px;
+  z-index: 3;
+}
+#tooltipChart {
+  position: relative;
+  left: 10%;
+  width: 200px !important;
+  height: 200px !important;
+}
+
+.sunburst-tooltip{
+ z-index: 2;
+}
+
+.toolTipText {
+  position: relative;
+  padding-top: 12px;
 }
