--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,7 +7,7 @@
   --main-color: #054357;
   --secondary-color: #CCCCCC;
   --accent-color: #FB7422;
-  --top-margin: 10%;
+  --top-margin: 9%;
 
   --remove-color: #D50000;      
   --add-color: #38B03D;        
@@ -378,22 +378,19 @@ input:checked + .slider_switch:before {
 
 .context-holder {
   position: fixed;
-  top: 70%;
+  top: 11em;
   left:20%;
   background-color: #d3d3d3;
   width: 80%;
-  height: 30%;
+  height: 90%;
   z-index: 2;
 }
 
 
 .sunburst{
-  background-color: transparent;
-  height: 300px;
-  width: 20%;
-  left: 25%;
-  position: fixed;
-  z-index: 2;
+  position: absolute;
+  left: 20%;
+  top: 40px;
 }
 
 .treeContext {
@@ -444,4 +441,8 @@ input:checked + .slider_switch:before {
 .toolTipText {
   position: relative;
   padding-top: 12px;
+}
+
+.navbar {
+      padding: 0rem 1rem;
 }
