--- a/views/indented.ejs
+++ b/views/indented.ejs
@@ -14,6 +14,7 @@
             rel="stylesheet"
             href="/javascripts/sunburst-chart/sunburst.css"
         />
+        <link rel="stylesheet" href="/javascripts/icicle-chart/icicle.css" />
         <link rel="stylesheet" href="/stylesheets/style.css" />
         <link rel="stylesheet" href="/stylesheets/maindash.css" />
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -33,12 +34,35 @@
         <script src="/javascripts/lineSystem.js"></script>
         <script src="/javascripts/filter.js"></script>
         <script src="/javascripts/ordering.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.16.0/d3.js"></script>
+        <script src="https://d3js.org/d3.v6.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.js"></script>
         <script src="https://cdn.jsdelivr.net/gh/emn178/chartjs-plugin-labels/src/chartjs-plugin-labels.js"></script>
         <script src="/javascripts/sunburst-chart/sunburst-chart.js"></script>
+        <script src="/javascripts/icicle-chart/icicle-chart.js"></script>
     </head>
     <body>
+        <script type="module">
+            import {
+                Runtime,
+                Inspector,
+            } from 'https://cdn.jsdelivr.net/npm/@observablehq/runtime@4/dist/runtime.js';
+            async function runChart() {
+                const notebook = await import(
+                    '/javascripts/observableHQ/packed-Circle-d3.js'
+                );
+                const define = notebook.default;
+                const alternativeView = new Runtime().module(define, name => {
+                    if (name === 'chart')
+                        return new Inspector(
+                            document.querySelector(
+                                '#observablehq-chart-9c71e317'
+                            )
+                        );
+                });
+                alternativeView.redefine('data', differences);
+            }
+            window.runChart = runChart;
+        </script>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a href="#"
                 ><div class="align-items-center no-gutters row">
@@ -296,7 +320,11 @@
             </div>
         </div>
 
-        <div id="sketch-holder" class="main_body right top">
+        <div
+            id="sketch-holder"
+            class="main_body right top"
+            style="display: none;"
+        >
             <div
                 id="tooltip"
                 style="position: absolute; display: none;z-index: 5;"
@@ -306,12 +334,11 @@
             </div>
             <!-- Our sketch will go here! -->
             <script src="/javascripts/drawTree.js"></script>
-            <div id="context-holder" class="context-holder">
-                <div id="chart" class="sunburst">
-                    <label id="treeContext" class="treeContext"></label>
-                </div>
-                <script></script>
-            </div>
+        </div>
+        <div id="context-holder" class="main_body right top">
+            <div id="chart" class="sunburst"></div>
+            <label id="treeContext" class="treeContext"></label>
+            <div id="observablehq-chart-9c71e317"></div>
         </div>
 
         <!-- -->
